[package]
name = "rust-mud-adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-argon2 = "2.1.0"
serde = { version = "1.0.201", features = ["derive"] }